--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,7 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	height: 85vh;
+	min-height: 90vh;
 	font-family: 'Poppins', sans-serif;
 	background-color: #1e2140;
 	color: white;
@@ -162,4 +162,10 @@ body {
 		opacity: 0.6;
 		cursor: pointer;
 	}
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+	main { transform: scale(0.8); }
+	
+	body .modes { font-size: 1.5rem; }
 }
