feat: replace question mark icon

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,164 @@
-*::before,*::after,*{margin:0;padding:0;-webkit-box-sizing:inherit;box-sizing:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;font-size:62.5%}body{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;-webkit-box-align:center;-ms-flex-align:center;align-items:center;min-height:90vh;font-family:'Poppins', sans-serif;background-color:#1e2140;color:white}body .main-heading{font-size:3.2rem;font-weight:500}body main{width:40rem;height:40rem;border-radius:50%;text-align:center}body .modes{font-size:1.8rem;padding:1.6rem 1rem;background:#151932;border-radius:10rem}body .modes a{margin-right:2em;text-decoration:none;font-weight:500;color:#484c67;-webkit-transition:all 300ms ease-out;transition:all 300ms ease-out}body .modes a.active{padding:0.5em 1em;border-radius:50px;background-color:#fa6f71;color:#1c2244}body .modes a:last-child{margin-right:0}body .get-started{background:royalblue;padding:1.2rem 2rem;border-radius:0.4rem;font-size:1.8rem;margin-top:2rem}body .pomodoro{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;height:100%;position:relative;margin:2.5rem 0;text-align:center;border-radius:50%;background:#151932;-webkit-box-shadow:50px 50px 82px #0e1021, -50px -50px 82px #1c2244;box-shadow:50px 50px 82px #0e1021, -50px -50px 82px #1c2244}body .pomodoro::before{content:'';position:absolute;border:10px solid royalblue;border-radius:50%;width:35rem;height:35rem}body .pomodoro__time{font-size:7rem;font-weight:500}body .pomodoro__state{font-size:2rem;margin-top:1em;padding-left:1em;letter-spacing:1em;text-transform:uppercase}.tooltip-container{position:fixed;bottom:2.5rem;right:5.5rem}.help__tooltip{position:relative;padding:0.8rem;background:rgba(65,105,225,0.7);border-radius:50%;text-align:center}.help__tooltip:hover .help__tooltip-content{opacity:1;visibility:visible}.help__tooltip-content{opacity:0;visibility:hidden;width:15rem;position:absolute;bottom:150%;left:30%;background-color:#151932;font-size:1.4rem;color:#fff;text-align:center;border-radius:6px;padding:1rem;margin-left:-6.5rem;z-index:1;-webkit-transition:visibility 200ms, opacity 200ms ease-in-out;transition:visibility 200ms, opacity 200ms ease-in-out}.help__tooltip-content h4{margin-bottom:0.8rem}.help__tooltip-content ul{list-style:none}.help__tooltip-content ul li:nth-child(even){margin-bottom:0.8rem}.help__tooltip-content::after{content:'';position:absolute;top:100%;left:50%;margin-left:-10px;border-width:10px;border-style:solid;border-color:#151932 transparent transparent transparent}.help__tooltip img{opacity:0.6;cursor:pointer}@media screen and (min-width: 320px) and (max-width: 480px){main{-webkit-transform:scale(0.8);transform:scale(0.8)}body .modes{font-size:1.5rem}}
+*::before,
+*::after,
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 90vh;
+  font-family: "Poppins", sans-serif;
+  background-color: #1e2140;
+  color: white;
+}
+body .main-heading {
+  font-size: 3.2rem;
+  font-weight: 500;
+}
+body main {
+  width: 40rem;
+  height: 40rem;
+  border-radius: 50%;
+  text-align: center;
+}
+body .modes {
+  font-size: 1.8rem;
+  padding: 1.6rem 1rem;
+  background: #151932;
+  border-radius: 10rem;
+}
+body .modes a {
+  margin-right: 2em;
+  text-decoration: none;
+  font-weight: 500;
+  color: #484c67;
+  transition: all 300ms ease-out;
+}
+body .modes a.active {
+  padding: 0.5em 1em;
+  border-radius: 50px;
+  background-color: #fa6f71;
+  color: #1c2244;
+}
+body .modes a:last-child {
+  margin-right: 0;
+}
+body .get-started {
+  background: royalblue;
+  padding: 1.2rem 2rem;
+  border-radius: 0.4rem;
+  font-size: 1.8rem;
+  margin-top: 2rem;
+}
+body .pomodoro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: 2.5rem 0;
+  text-align: center;
+  border-radius: 50%;
+  background: #151932;
+  box-shadow: 50px 50px 82px #0e1021, -50px -50px 82px #1c2244;
+}
+body .pomodoro::before {
+  content: "";
+  position: absolute;
+  border: 10px solid royalblue;
+  border-radius: 50%;
+  width: 35rem;
+  height: 35rem;
+}
+body .pomodoro__time {
+  font-size: 7rem;
+  font-weight: 500;
+}
+body .pomodoro__state {
+  font-size: 2rem;
+  margin-top: 1em;
+  padding-left: 1em;
+  letter-spacing: 1em;
+  text-transform: uppercase;
+}
+
+.tooltip-container {
+  position: fixed;
+  bottom: 2.5rem;
+  right: 5.5rem;
+}
+
+.help__tooltip {
+  position: relative;
+  padding: 0.8rem;
+  background: rgba(65, 105, 225, 0.7);
+  border-radius: 50%;
+  display: flex;
+}
+.help__tooltip:hover .help__tooltip-content {
+  opacity: 1;
+  visibility: visible;
+}
+.help__tooltip-content {
+  opacity: 0;
+  visibility: hidden;
+  width: 15rem;
+  position: absolute;
+  bottom: 150%;
+  left: 30%;
+  background-color: #151932;
+  font-size: 1.4rem;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 1rem;
+  margin-left: -6.5rem;
+  z-index: 1;
+  transition: visibility 200ms, opacity 200ms ease-in-out;
+}
+.help__tooltip-content h4 {
+  margin-bottom: 0.8rem;
+}
+.help__tooltip-content ul {
+  list-style: none;
+}
+.help__tooltip-content ul li:nth-child(even) {
+  margin-bottom: 0.8rem;
+}
+.help__tooltip-content::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -10px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: #151932 transparent transparent transparent;
+}
+.help__tooltip img {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  main {
+    transform: scale(0.8);
+  }
+  body .modes {
+    font-size: 1.5rem;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
