fix(settings): prevent modal toggle if input is focused
Reduce width of inputs on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -390,4 +390,8 @@ main {
     left: 1.5rem;
     bottom: 1.5rem;
   }
+
+  .settings-modal__row-wrap input[type="number"] {
+    width: 10ch;
+  }
 }
