--- a/src/style.css
+++ b/src/style.css
@@ -121,13 +121,13 @@ main {
   color: #484c67;
   cursor: pointer;
   transition: all 300ms ease-out;
-}
 
-.mode.active {
-  padding: 0.5em 1em;
-  border-radius: 50px;
-  background-color: var(--color-accent);
-  color: #1c2244;
+  &.active {
+    padding: 0.5em 1em;
+    border-radius: 50px;
+    background-color: var(--color-accent);
+    color: #1c2244;
+  }
 }
 
 .mode:last-child {
@@ -155,15 +155,15 @@ main {
   border-radius: 50%;
   background: #151932;
   box-shadow: 50px 50px 82px #0e1021, -50px -50px 82px #1c2244;
-}
 
-.pomodoro::before {
-  content: "";
-  position: absolute;
-  border: 10px solid var(--color-accent);
-  border-radius: 50%;
-  width: 35rem;
-  height: 35rem;
+  &::before {
+    content: "";
+    position: absolute;
+    border: 10px solid var(--color-accent);
+    border-radius: 50%;
+    width: 35rem;
+    height: 35rem;
+  }
 }
 
 .pomodoro__time {
@@ -183,15 +183,11 @@ main {
   position: fixed;
   top: 2.5rem;
   right: 5.5rem;
-}
 
-.settings-btn__wrap button {
-  border: 0;
-  background-color: transparent;
-}
-
-.settings-modal__container::backdrop {
-  background: color-mix(in srgb, #020617, transparent 40%);
+  & button {
+    border: 0;
+    background-color: transparent;
+  }
 }
 
 .settings-modal__container {
@@ -201,6 +197,10 @@ main {
   opacity: 0;
   overflow: visible;
   transition: opacity 200ms, transform 200ms allow-discrete;
+
+  &::backdrop {
+    background: color-mix(in srgb, #020617, transparent 40%);
+  }
 
   &:popover-open {
     opacity: 1;
@@ -310,75 +310,9 @@ main {
   }
 }
 
-.tooltip-container {
-  position: fixed;
-  bottom: 2.5rem;
-  right: 5.5rem;
-}
-
-.help__tooltip {
-  position: relative;
-  padding: 0.8rem;
-  background: rgba(65, 105, 225, 0.7);
-  border-radius: 50%;
-  display: flex;
-}
-
-.help__tooltip-content {
-  opacity: 0;
-  visibility: hidden;
-  width: 15rem;
-  position: absolute;
-  bottom: 150%;
-  left: 30%;
-  background-color: #151932;
-  font-size: 1.4rem;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 1rem;
-  margin-left: -6.5rem;
-  z-index: 1;
-  transition: visibility 200ms, opacity 200ms ease-in-out;
-}
-
-.help__tooltip-content h4 {
-  margin-bottom: 0.8rem;
-  font-weight: 500;
-}
-
-.help__tooltip-content ul {
-  list-style: none;
-}
-
-.help__tooltip-content ul li:nth-child(even) {
-  margin-bottom: 0.8rem;
-}
-
-.help__tooltip-content::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -10px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: #151932 transparent transparent transparent;
-}
-
-.help__tooltip img {
-  opacity: 0.6;
-  cursor: pointer;
-}
-
-.visible {
-  opacity: 1;
-  visibility: visible;
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   main {
-    transform: scale(0.8);
+    transform: scale(0.85);
   }
 
   .modes {
